Update 'y9tqzpv3j-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:52abf4c25a5751f489168d7376086ae15152d18e@sha256:ad3780d76e22bf8a20351feda4a6ae3309e65a7de2c6e995e2697e706931414e

--- a/components/y9tqzpv3j-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/y9tqzpv3j-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: y9tqzpv3j-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:52abf4c25a5751f489168d7376086ae15152d18e@sha256:ad3780d76e22bf8a20351feda4a6ae3309e65a7de2c6e995e2697e706931414e
+          name: container-image
